--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,8 @@
         <div id="downloadPDF"><img src="static/CSS/images/download_pdf.png" alt="download_pdf" class="download_picto"></div>
     </div>
   -->
-    <div id="reinit">R&eacute;initialiser les filtres</div>
+  <div id="reinit">R&eacute;initialiser les filtres</div>
+  <div id="download"><iconify-icon id="iconDownload" icon="fluent:arrow-download-20-regular" width="20" height="20"></iconify-icon>Je t&eacute;l&eacute;charge la liste d’acteurs de ma sélection </div>
   </div>
 <div id="result" style="display: none;">
   <!-- <h1 style="font-size: 3vmin; padding: 10%;">S&eacute;lectionner un acteur sur la carte</h1> -->
