--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -48,10 +48,15 @@ body {
     background-color: #BDB246;
     border-radius: 15px;
     color: #fff;
-    padding: 0.05rem 0.5rem 0.1rem 0.5rem;
+    padding: 0.1rem 0.7rem 0.2rem 0.7rem;
     width: fit-content;
     font-style: italic;
     margin-bottom: 5px;
+}
+
+#headerExpertise {
+    font-size: 12px;
+    margin-bottom: 0.5rem;
 }
 
 .logoLabel {
@@ -63,10 +68,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: left;
-    margin-top: 40px;
+    margin-top: 15px;
 }
 .coordonnees {
-    margin-top: 40px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .iconCoords {
@@ -208,7 +217,7 @@ body {
     background-color: #eee;
     border-radius: 2px;
     position: absolute;
-    left: 61px;
+    left: 4px;
 }
 .checkboxContainer:hover input ~ .checkmark {
     background-color: #ccc;
@@ -243,7 +252,7 @@ body {
     height: auto;
     transform: rotate(30deg);
     position: absolute;
-    right: 110px;
+    right: 88px;
 }
 
 .checkboxes {
@@ -261,6 +270,7 @@ body {
     cursor: pointer;
     margin-left: 25px;
     margin-top: 5px;
+    position: relative;
 }
 .checkboxContainer:hover {
     opacity: 1;
@@ -360,13 +370,53 @@ body {
     background-color: #FCFAFA;
     border-radius: 10px;
     padding: 7px 12px 7px 12px;
-    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+    box-shadow: 0px 2px 2px rgba(0,0,0,0.25);
     margin-bottom: 15px;
     margin-top: 15px;
+
+    align-self: center;
+    text-decoration: none;
+    color: #294F8D;
 }
 #webLink:hover {
     opacity: 0.6;
 }
 #webLink:active{
     box-shadow: inset 0px 1px 4px rgba(0,0,0,0.25);
+}
+
+/* Gestion des tooltips */
+
+.tooltip .tooltipText {
+    visibility: hidden;
+    background-color: #FCFAFA;
+    color: black;
+    text-align: center;
+    padding: 15px;
+    border-radius: 15px;
+    border: black 1px solid;
+    cursor: auto;
+
+
+    /* voir le positionnement par rapport à la chekcbox*/
+    position: absolute;
+    left: 100%;
+    top: auto;
+    z-index: 3000;
+    width: auto;
+}
+
+.tooltip:hover .tooltipText {
+    visibility: visible;
+}
+
+.textTooltipText {
+    width: 400px;
+    text-align: left;
+    font-size: 12px;
+}
+
+.headerTooltip {
+    font-size: 16px;
+    font-weight: 400;
 }
