--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
               <div class="headerTooltip">La Marque Végétal local</div>
               <div class="textTooltipText">
                 La Marque Végétal local est un outil de traçabilité des végétaux sauvages naturellement présents dans la région d’origine, afin de conserver la diversité génétique végétale et de restaurer les écosystèmes. 
-                <a href="https://www.vegetal-local.fr/">Pöur en savoir plus</a>
+                <a href="https://www.vegetal-local.fr/" target="_blank">Pöur en savoir plus</a>
               </div>
             </span>
           </label>
@@ -92,13 +92,12 @@
               <div class="headerTooltip">Le label Plante bleue</div>
               <div class="textTooltipText">
                 Plante Bleue est la certification nationale de référence garantissant officiellement une production éco-responsable de végétaux par des entreprises de production horticoles ou de pépinière certifiées.
-                <a href="https://www.plantebleue.fr/">Pöur en savoir plus</a>
+                <a href="https://www.plantebleue.fr/" target="_blank">Pöur en savoir plus</a>
               </div>
             </span>
           </label>
         </div>
       </div>
-
     </div>
     <!--
     <div style="border-bottom: none">
