--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,8 @@
 <body>
 
     <h1>Mise à jour des données de Pages Vertes</h1>
-    <p>Attention ! La mise à jour des données prend autour d'une minute !</p>
-    <p>Si le mot de passe est bon, la page mouline pendant une minute à peu près, sinon, la page renvoyée est celle du mauvais mot de passe</p>
+    <p>Attention ! La mise à jour des données peut prendre quelques minutes !</p>
+    <p>Si le mot de passe est bon, la page charge pendant quelques minutes, le processus de mise à jour des données est lancé, sinon la p</p>
 
 
     <form action="" method="post">
