--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="static/CSS/style.css">
   <link rel="stylesheet" type="text/css" href="static/CSS/leaflet.css" />
+  <link rel="stylesheet" href="static/CSS/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Maitree:wght@200;300;400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
@@ -46,7 +46,7 @@
   <div id="bandeauIntro">
   </div>
   <div id="map"></div>
-  <div id="bigContainer">
+  <div class="bigContainer">
     <div id="titreDePage">
       <img src="static/CSS/images/canographia-logo-svg.svg" id="logo-site">
       <div>Pages Vertes</div>
