--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,20 @@
 </body>
 -->
 
+<div class="searchbar-container">
+  <div class="search-form-container">
+    <form action="" class="search-form">
+      <input type="text" name="" class="search-input" id="search" placeholder="chercher un acteur ...">
+      <button id="search-clear" class="search-clear-results">clear</button>
+    </form>
+  </div>
+  <div class="search-results-container">
+    <ul class="search-results-list" id="list">
+
+    </ul>
+  </div>
+</div>
+
 
 
 <script>
