--- a/templates/index2.html
+++ b/templates/index2.html
@@ -65,6 +65,7 @@
                     <input type="checkbox" id="checkboxCharte">
                     <div class="checkboxText">Signataires de la Charte de l'arbre</div>
                     <img src="static/CSS/images/iconeCharte.png" alt="iconeCharte" id="iconeCharte">
+                    <svg class="tooltip-info-logo" xmlns="http://www.w3.org/2000/svg" width="20" height="20" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none" stroke="#bdb246" stroke-width="2"><circle cx="12" cy="12" r="10"/><path stroke-linecap="round" d="M12 7h.01"/><path stroke-linecap="round" stroke-linejoin="round" d="M10 11h2v5m-2 0h4"/></g></svg>
                     <span class="checkmark"></span>
                     <span class="tooltipText">
                       <div class="headerTooltip">La Charte de l’Arbre</div>
@@ -76,7 +77,8 @@
                   </label>
                   <label for="checkboxVegetalLocal" class="checkboxContainer tooltip">
                     <input type="checkbox" id="checkboxVegetalLocal">
-                    <div class="checkboxText">Marque Vegetal Local</div>          
+                    <div class="checkboxText">Marque Vegetal Local</div>  
+                    <svg class="tooltip-info-logo" xmlns="http://www.w3.org/2000/svg" width="20" height="20" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none" stroke="#bdb246" stroke-width="2"><circle cx="12" cy="12" r="10"/><path stroke-linecap="round" d="M12 7h.01"/><path stroke-linecap="round" stroke-linejoin="round" d="M10 11h2v5m-2 0h4"/></g></svg>       
                     <span class="checkmark"></span>
                     <span class="tooltipText">
                       <div class="headerTooltip">La Marque Végétal local</div>
@@ -89,6 +91,7 @@
                   <label for="checkboxPlanteBleue" class="checkboxContainer tooltip">
                     <input type="checkbox" id="checkboxPlanteBleue">
                     <div class="checkboxText">Label Plante Bleue</div>
+                    <svg class="tooltip-info-logo" xmlns="http://www.w3.org/2000/svg" width="20" height="20" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none" stroke="#bdb246" stroke-width="2"><circle cx="12" cy="12" r="10"/><path stroke-linecap="round" d="M12 7h.01"/><path stroke-linecap="round" stroke-linejoin="round" d="M10 11h2v5m-2 0h4"/></g></svg>
                     <span class="checkmark"></span>
                     <span class="tooltipText">
                       <div class="headerTooltip">Le label Plante bleue</div>
