--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -397,24 +397,28 @@ body {
 
 .tooltip .tooltipText {
     visibility: hidden;
-    background-color: #FCFAFA;
-    color: black;
+    background-color: #78BCED;
+    color: white;
     text-align: center;
     padding: 15px;
     border-radius: 15px;
-    border: black 1px solid;
     cursor: auto;
 
 
-    /* voir le positionnement par rapport à la chekcbox*/
+    /* voir le positionnement par rapport à la checkbox*/
     position: absolute;
     left: 100%;
     top: auto;
     z-index: 3000;
     width: auto;
+    opacity: 0.95;
 }
 
-.tooltip:hover .tooltipText {
+.tooltip-info-logo:hover ~ .tooltipText {
+    visibility: visible;
+}
+
+.tooltipText:hover {
     visibility: visible;
 }
 
@@ -422,11 +426,17 @@ body {
     width: 400px;
     text-align: left;
     font-size: 12px;
+    font-weight: 400;
 }
 
 .headerTooltip {
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 800;
+}
+
+.tooltip-info-logo {
+    position: absolute;
+    right: 0;
 }
 
 
