--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -488,12 +488,12 @@ body {
 }
 
 .search-tooltip {
-    animation: 0.4s ouvertureTooltipSearch ease-out;
+    animation: 0.1s ouvertureTooltipSearch;
 }
 
 @keyframes ouvertureTooltipSearch {
     0% {max-height: 0%;}
-    100% {max-height: 100%}
+    100% {max-height: 100px}
 }
 
 .search-tip {
